syntax = "proto3";

package com.odc.notification.v1;

option java_multiple_files = true;
option java_package = "com.odc.notification.v1";
option java_outer_classname = "SendOtpEventProto";

message SendOtpRequest {
  string email = 1;
}